One last read-through and edits

--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -2,13 +2,13 @@
 
 @Unpublished{racets,
   author = {Micinski, Kristopher and Wang, Zhanpeng and Gilray, Thomas},
-  title  = {\textsc{Racets}: {F}aceted execution in {R}acket},
+  title  = {\textsc{Racets}: faceted execution in {R}acket},
   year   = {2018},
 }
 
 @Unpublished{abstract-inter,
   author = {Micinski, Kristopher and Daris, David and Gilray, Thomas},
-  title  = {Abstracting faceted execution: {S}tatic analysis of dynamic information-flow control for higher-order languages},
+  title  = {Abstracting faceted execution: static analysis of dynamic information-flow control for higher-order languages},
   year   = {2019},
 }
 
@@ -94,7 +94,7 @@
 @InProceedings{lang-as-lib,
   author    = {Tobin-Hochstadt, Sam and St-Amour, Vincent and Culpepper, Ryan and Flatt, Matthew and Felleisen, Matthias},
   title     = {Languages as libraries},
-  booktitle = {Proceedings of Conference on Programming Language Design and Implementation},
+  booktitle = {Proceedings of the Conference on Programming Language Design and Implementation},
   year      = {2011},
   publisher = {ACM},
 }
